# AI_Powered_Code_Reviewer

./: .replit  CMakeCache.txt  CMakeLists.txt  README.md  cpp_code_reviewer.py  pyproject.toml  replit.nix  sample.cpp
include/: CLI11.hpp  json.hpp
src/: clang_parser.cpp  clang_parser.h  code_analyzer.cpp  code_analyzer.h  llm_client.cpp  llm_client.h  main.cpp  utils.cpp  utils.h
